--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -35,7 +35,7 @@
                 <span class="navbar-toggling-icon"></span>
             </button>
             <a class="navbar-brand d-flex align-items-center" href="#">
-                <span class="brand-text" style="color: rgba(0, 0, 0, 0.5);"><img src="images/logo.webp" width="50" height="50" style="border-radius: 50%;" alt="Shoo Store Logo"><i style="margin-left: 5px;">KANAAN SHOE COLLECTION</i></span>
+                <span class="brand-text" style="color: rgba(0, 0, 0, 0.5);"><img src="../static/images/logo.webp" width="50" height="50" style="border-radius: 50%;" alt="Shoo Store Logo"><i style="margin-left: 5px;">KANAAN SHOE COLLECTION</i></span>
             </a>
             <a class="nav-link d-lg-none search-icon-mobile" href="#">
                 <i class="fas fa-search"></i>
@@ -469,7 +469,7 @@ footer.bg-dark {
             }, 1000); // Match the transition duration in CSS
         });
     </script>
-    <script src="script.js"></script>
+    <script src="../static/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
