--- a/templates/account.html
+++ b/templates/account.html
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link text-light" aria-current="page" href="{{ url_for('brands') }}">Home</a>
+                        <a class="nav-link text-light" aria-current="page" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="{{ url_for('brands') }}">Brands</a>
