--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
     <div class="slider position-relative" style="background-color: white !important;">
         <div class="sliderWrapper d-flex">
             <div class="sliderItem flex-column align-items-center justify-content-center position-relative w-100">
-                <img src="../static/img/nike1.png" alt="Nike Air Force" class="sliderImage img-fluid" data-aos="fade-up">
+                <img src="../static/img/nike1.png" alt="Nike Nike Airmax" class="sliderImage img-fluid" data-aos="fade-up">
                 <div class="sliderBgCircle position-absolute"></div>
                 <h1 class="sliderTitle position-absolute text-white" data-aos="fade-up">NIKE AIRMAX <br> NEW <br> SEASON</h1>
                 <!-- <h2 class="sliderPrice position-absolute text-white border border-light" data-aos="fade-up">3000/=</h2> -->
@@ -299,7 +299,7 @@
                         <h1 class="footerMenuTitle fs-5 fw-bold text-light mb-3">About Us</h1>
                         <ul class="footerMenuList list-unstyled">
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Company</a></li>
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Contact</a></li>
+                            <li class="footerListItem text-light mb-2"><a href="#contact-us" class="text-light text-decoration-none">Contact</a></li>
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Stores</a></li>
                         </ul>
                     </div>
@@ -307,19 +307,19 @@
                         <h1 class="footerMenuTitle fs-5 fw-bold text-light mb-3">Useful Links</h1>
                         <ul class="footerMenuList list-unstyled">
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Support</a></li>
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Refund</a></li>
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">FAQ</a></li>
+                            <!-- <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Refund</a></li>
+                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">FAQ</a></li> -->
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Feedback</a></li>
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Stories</a></li>
+                            <!-- <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Stories</a></li> -->
                         </ul>
                     </div>
                     <div class="footerMenu col-12 col-md-4">
                         <h1 class="footerMenuTitle fs-5 fw-bold text-light mb-3">Products</h1>
                         <ul class="footerMenuList list-unstyled">
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Air Force</a></li>
+                            <!-- <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Nike Airmax</a></li> -->
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">NIKE AIRMAX</a></li>
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Blazer</a></li>
-                            <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Crater</a></li>
+                            <!-- <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Crater</a></li> -->
                             <li class="footerListItem text-light mb-2"><a href="#" class="text-light text-decoration-none">Hippie</a></li>
                         </ul>
                     </div>
@@ -345,7 +345,7 @@
                     </div>
                 </div>
                 <div class="footerRightMenu">
-                    <span class="copyright text-light">© KANAAK Shoe Collections. All rights reserved. 2024.</span>
+                    <span class="copyright text-light">© KANAAN Shoe Collections. All rights reserved. 2024.</span>
                     <span class="copyright text-light d-block mt-2">Made by <a href="tel:+254769525570" class="text-light text-decoration-none">@wenstech software solutions</a>.</span>
                 </div>
             </div>
@@ -355,7 +355,7 @@
 <style>
     /* Footer Styling */
 footer.bg-dark {
-    background-color: #2c3e50 !important; /* Dark green for KANAAK branding */
+    background-color: #2c3e50 !important; /* Dark green for KANAAN branding */
     color: #ffffff;
 }
 
