--- a/templates/brands.html
+++ b/templates/brands.html
@@ -177,7 +177,7 @@
         </div>
     </main>
     <!-- Floating WhatsApp Button -->
-<a href="https://wa.me/254769525570" target="_blank" class="whatsapp-float">
+<a href="https://wa.me/qr/QXTD5O6ENXSFD1" target="_blank" class="whatsapp-float">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
 </a>
 <style>
