--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,14 @@
     <title>KANAAN SHOE COLLECTION</title>
     <!-- Favicon -->
     <link rel="icon" href="../static/images/logo.webp" type="image/webp" sizes="16x16" />
+    <style>
+        .slider {
+            background-image: url('../static/images/back.jpg') !important;
+            background-size: cover;
+            overflow: hidden;
+            position: relative;
+          }
+    </style>
 </head>
 
 <body>
@@ -237,11 +245,11 @@
         <div class="col-lg-6 mb-4">
             <div class="p-4 bg-light shadow rounded">
                 <h5>Kanaan Shoe Collection</h5>
-                <p>1234, Business Avenue, Suite 600<br>Nairobi, Kenya</p>
+                <p>Business Avenue<br>Nairobi, Kenya</p>
                 <h5>Email Us</h5>
-                <p><a href="mailto:info@kanaan.com">info@kanaan.com</a></p>
+                <p><a href="maxwellusenaka@gmail.com">maxwellusenaka@gmail.com</a></p>
                 <h5>Call Us</h5>
-                <p><a href="tel:+254769525570">+254 769 525 570</a></p>
+                <p><a href="tel:+25490461052">+254 790461052</a></p>
                 <h5>Working Hours</h5>
                 <p>Monday - Friday: 7:00 AM - 6:00 PM<br>Saturday: 9:00 AM - 4:00 PM</p>
             </div>
@@ -250,7 +258,7 @@
 </section>
 
 <!-- Floating WhatsApp Button -->
-<a href="https://wa.me/254769525570" target="_blank" class="whatsapp-float">
+<a href="https://wa.me/qr/QXTD5O6ENXSFD1" target="_blank" class="whatsapp-float">
     <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" class="whatsapp-icon">
 </a>
 
