--- a/templates/home.html
+++ b/templates/home.html
@@ -252,6 +252,7 @@
                                 <button type="submit" class="btn btn-success">Add Product</button>
                             </form>
                             <h5 class="mt-4">Existing Products</h5>
+                            <div class="table-responsive">
                             <table class="table table-dark table-striped mt-3">
                                 <thead>
                                     <tr>
@@ -282,6 +283,7 @@
                                     {% endfor %}
                                 </tbody>
                             </table>
+                        </div>
                         </div>
                     </div>
                 </section>
