--- a/templates/home.html
+++ b/templates/home.html
@@ -73,7 +73,7 @@
 
             <div class="col-md-9 col-lg-10">
                 <section id="dashboard" class="mb-5 section">
-                    <h2 class="mb-4">Admin Dashboard - Welcome, {{ admin }}</h2>
+                    <h2 class="mb-4">Admin Dashboard </h2>   <!--- Welcome, {{ admin }}-->
                     <div class="row g-4">
                         <div class="col-md-4">
                             <div class="card bg-dark text-light border-0 shadow">
